--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 
     </div>
     <!--This it the link to the app.js script-->
+    <script src = "js/task.js"></script>
     <script src = "js/app.js" ></script> 
 </body>
 
